W-16554282: JUnit 5 upgrade